fix: [2/2] Keyboard Layout applet doesn't follow actual layout switching

DIGEST:
BUG: 426900